--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -8,6 +8,14 @@
   margin-top: 2rem;
 }
 
+.hero #particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 .hero__img {
   border-radius: 50%;
   width: 6rem;
