--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -4,8 +4,21 @@
   align-items: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  position: relative;
+  position: sticky;
+  top: 0;
   z-index: 999;
+}
+
+.header__logo {
+  display: flex;
+  position: relative;
+  font-weight: 700;
+  color: var(--clr-slate400);
+  text-decoration: none;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.6s;
 }
 
 .header__menu {
@@ -17,6 +30,10 @@
   width: var(--size-2xl);
   height: var(--size-2xl);
   display: block;
+}
+
+#shrink {
+  flex-shrink: 0;
 }
 
 /* xs */
