--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  position: sticky;
+  position: relative;
   top: 0;
   z-index: 999;
 }
